--- a/app/assets/stylesheets/_showhome.scss
+++ b/app/assets/stylesheets/_showhome.scss
@@ -178,6 +178,7 @@
                   word-break: break-all;
                   p{
                     margin-bottom: 5px;
+                    padding: 0 30px;
                   }
                 }
               }
