--- a/app/assets/stylesheets/_showhome.scss
+++ b/app/assets/stylesheets/_showhome.scss
@@ -179,6 +179,9 @@
                   p{
                     margin-bottom: 5px;
                     padding: 0 30px;
+                    @media screen and (max-width : 500px){
+                      padding: 0 !important;
+                    }
                   }
                 }
               }
