--- a/app/views/abouts/_header.html.haml
+++ b/app/views/abouts/_header.html.haml
@@ -39,7 +39,7 @@
         %ul.navbar__menu
           %li.navbar__menu--box
             =link_to abouts_path, class: "navbar__menu--box--about" do
-              About
+              HomeLifeとは？
           %li.navbar__menu--box
             =link_to accounts_path, class: "navbar__menu--box--accounts" do
               Instagramer一覧
@@ -89,7 +89,7 @@
         %ul.navbar__menu
           %li.navbar__menu--box
             =link_to abouts_path, class: "navbar__menu--box--about" do
-              About
+              HomeLifeとは？
           %li.navbar__menu--box
             =link_to new_user_session_path, class: "navbar__menu--box--accounts" do
               Instagramer一覧
