--- a/app/views/homes/_footer.html.haml
+++ b/app/views/homes/_footer.html.haml
@@ -8,16 +8,16 @@
     %ul.footer__top
       %li.footer__top--box
         =link_to "#", class: "footer__top--box" do
-          About
+          HomeLifeとは？
       %li.footer__top--box
         =link_to "#", class: "footer__top--box" do
-          Company
+          Instagramer一覧
       %li.footer__top--box
         =link_to "#", class: "footer__top--box" do
           News
       %li.footer__top--box
         =link_to "#", class: "footer__top--box" do
-          Contact
+          投稿一覧
     %ul.footer__bottom
       %li.footer__bottom--link
         =link_to "https://www.wantedly.com/", class: "footer__bottom--link" do
