--- a/app/views/homes/_header.html.haml
+++ b/app/views/homes/_header.html.haml
@@ -36,7 +36,7 @@
         %ul.navbar__menu
           %li.navbar__menu--box
             =link_to abouts_path, class: "navbar__menu--box--about" do
-              About
+              HomeLifeとは？
           %li.navbar__menu--box
             =link_to accounts_path, class: "navbar__menu--box--accounts" do
               Instagramer一覧
@@ -80,7 +80,7 @@
         %ul.navbar__menu
           %li.navbar__menu--box
             =link_to abouts_path, class: "navbar__menu--box--about" do
-              About
+              HomeLifeとは？
           %li.navbar__menu--box
             =link_to new_user_session_path, class: "navbar__menu--box--accounts" do
               Instagramer一覧
