--- a/app/views/images/_main_home.html.haml
+++ b/app/views/images/_main_home.html.haml
@@ -4,7 +4,7 @@
       %p.imtop
         Images
       %h3.imdown
-        Homes Bot
+        Post List
   .immain_middle
     .immain_middle--box
       %ul.immain_middle--box--ul
