--- a/app/views/abouts/_main_home.html.haml
+++ b/app/views/abouts/_main_home.html.haml
@@ -8,13 +8,13 @@
     .abmain_center--content
       .abmain_center--content--box
         %h1.abtitle
-          Home Life
+          Home Life とは…？
         %p.abcontent
-          今回は、カリキュラムの復習も兼ねて、主に学んできた言語を使いながら作成しました。悩んでも時間の無駄なので、主観的に考えた結果、自分自身の夢の１つをテーマにしました。
+          「マイホーム購入に後悔する人が多いな」→「実際に後悔した点をこれから購入を考えている人向けに共有できたらいいな」 から始まり、気軽に投稿や共有できるサービスです。
         %p.abcontent
-          それは「マイホーム」です。将来こう同じように思う方、もしかしたら少なからずいると思いまして、じゃあこのテーマに関わる情報を"簡単かつ無駄なく要点的に"集めたものがあればいいなと思い作成しました。
+          このテーマに関わる情報を「簡単かつ無駄なく要点的に」集めたものがあればいいなと思い作成しました。
         %p.abcontent
-          「マイホーム」がテーマなので、写真が合わせて載っていた方がわかりやすいと思い、Instagramを利用。Accountsページにて、いわゆるインフルエンサーと呼ばれる方々をリスト化し表示しました。
+          インフルエンサーと呼ばれる方々をリスト化し表示したページもあります。記載したインフルエンサーの方々の中には、家づくり以外にも、生活全般(食、掃除、収納など)のことを発信しております。
         %p.abcontent
-          記載したインフルエンサーの方々の中には、家づくり以外にも、生活全般(食、掃除、収納など)のことを発信しております。
+          家づくりの他ライフスタイルに関わるものでも、記載されてるインフルエンサーの情報を引用してでも、良かったらぜひ投稿・共有してみてください！
 
