--- a/app/views/accounts/_header.html.haml
+++ b/app/views/accounts/_header.html.haml
@@ -38,7 +38,7 @@
       %ul.navbar__menu
         %li.navbar__menu--box
           =link_to abouts_path, class: "navbar__menu--box--about" do
-            About
+            HomeLifeとは？
         %li.navbar__menu--box
           =link_to accounts_path, class: "navbar__menu--box--accounts" do
             Instagramer一覧
