--- a/app/views/abouts/_header.html.haml
+++ b/app/views/abouts/_header.html.haml
@@ -1,11 +1,11 @@
 .header
-  .header-left
-    .form-search
-      %input#keyword.form-control{:placeholder => "instagramer検索", :type => "text"}/
-      = button_tag type: "button", class: "searchbtn", id: "submit" do
-        = icon('fas', 'search', class: 'searchbtn--icon')
-    -# %ul#list
   - if user_signed_in?
+    .header-left
+      .form-search
+        = form_with(url: search_homes_path, local: true, method: :get, id: "keyword") do |form| 
+          = form.text_field :keyword, placeholder: "投稿を検索", class: "form-control" 
+          = button_tag type: "submit", class: "searchbtn" do
+            = icon('fas', 'search', class: 'searchbtn--icon')
     .header-right
       = link_to abouts_path, class: "titleab" do
         .titleab
@@ -55,6 +55,12 @@
           
         .hero
   - else
+    .header-left
+      .form-search
+        = form_with(url: new_user_session_path, local: true, method: :get, id: "keyword") do |form| 
+          = form.text_field :keyword, placeholder: "投稿を検索", class: "form-control" 
+          = button_tag type: "submit", class: "searchbtn" do
+            = icon('fas', 'search', class: 'searchbtn--icon')
     .header-right
       
       .titleab
@@ -91,7 +97,7 @@
             =link_to abouts_path, class: "navbar__menu--box--about" do
               HomeLifeとは？
           %li.navbar__menu--box
-            =link_to new_user_session_path, class: "navbar__menu--box--accounts" do
+            =link_to accounts_path, class: "navbar__menu--box--accounts" do
               Instagramer一覧
           %li.navbar__menu--box
             =link_to new_user_session_path, class: "navbar__menu--box--news" do
