--- a/app/views/accounts/_header.html.haml
+++ b/app/views/accounts/_header.html.haml
@@ -73,10 +73,10 @@
                                   expanded: "false"}}
           User Menu
         .dropdown-menu{aria: {labelledby: "dropdownMenuLink"}}
-          =link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do
-            Log out
-          =link_to edit_user_registration_path(current_user), class: "dropdown-item" do
-            Edit user
+          =link_to new_user_session_path, class: "dropdown-item" do
+            Log in
+          =link_to new_user_registration_path, class: "dropdown-item" do
+            Create user
     %a.menu
       %span.menu__line.menu__line--top
       %span.menu__line.menu__line--center
