--- a/app/views/homes/_header.html.haml
+++ b/app/views/homes/_header.html.haml
@@ -64,7 +64,7 @@
         .dropdown-menu{aria: {labelledby: "dropdownMenuLink"}}
           =link_to new_user_session_path, class: "dropdown-item" do
             Log in
-          =link_to new_user_registration_path, class: "dropdown-item" do
+          =link_to users_path, class: "dropdown-item" do
             Create user
     %a.menu
       %span.menu__line.menu__line--top
