--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "./newhome";
 @import "./showhome";
 @import "./likes";
+@import "./indexuser";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "bootstrap";
